tests/js/error/semantics/builtin_string18.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ******************************************************************************/

var __result1 = "  12345\n\n".trim();
var __expect1 = "12345"
	
var __result2 = "\n\n12345\n\n".trim();
var __expect2 = "12345"